@@ -2504,3 +2504,7 @@ sanity checks.
 
 Added -O option to pvalue and pextrem to report watts/sr/m^2 even if
 picture is XYZE.
+
+Made subtle changes to header i/o routines to preserve alignment in
+binary file formats to enable memory-mapping.  Implemented memory-mapped
+matrix loading in rmtxop for binary double files.
